fix lint and tests and tts.rocks

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,8 @@
     <title>Quiz - Adaptive Language Learning</title>
     <meta name="description" content="AI-powered adaptive quiz application for language learning" />
 
+    <!-- TTS.Rocks library for text-to-speech -->
+    <script src="https://tts.rocks/tts.js" onload="window.TTS_LOADED = true;"></script>
   </head>
   <body>
     <div id="root"></div>
